--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "start:dev": "nodemon app.js",
+    "db:reset": "dropdb contacts && createdb contacts && npm run load_schema",
     "load_schema": "psql contacts < schema.sql",
     "load_contacts": "psql contacts < contacts.sql",
     "test": "echo \"Error: no test specified\" && exit 1"
