--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.17.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "knex": "^0.13.0",
     "pg": "^6.1.5"
   },
   "devDependencies": {
