--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "assessment1",
+  "name": "Week 5 Assessment: Contacts App",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Build a contacts manager web application with Express and PostgreSQL.",
   "scripts": {
-    "start": "node app.js",
-    "start:dev": "nodemon app.js",
+    "start": "node server.js",
+    "start:dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {},
   "devDependencies": {}
 }
